--- a/form.html
+++ b/form.html
@@ -9,10 +9,9 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" href="/assets/styles/styles.css">
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.jsx"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
@@ -20,48 +19,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
 
 <!--HEADER-->
-    
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
-        <a class="navbar-brand" href="./index.html">
-          <img src="./assets/img/logoruthleal-cropped.svg" width="100px" height="30px" alt="Dra. Ruth Leal" id="logo">
-        </a>
+    <header id="header">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand" href="./index.html">
+            <img src="./assets/img/logoruthleal-cropped.svg" width="100px" height="30px" alt="Dra. Ruth Leal" id="logo">
+          </a>
 
-  <!--NAVBAR-->
+    <!--NAVBAR-->
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Início</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Conheça</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Fale comigo<span class="sr-only">(Página atual)</span></a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Redes sociais
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Instagram</a>
-                <a class="dropdown-item" href="#">Facebook</a>
-                <a class="dropdown-item" href="#">Linkedin</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-    </nav>
-    </div>
-
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Início</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Fale comigo<span class="sr-only">(Página atual)</span></a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Redes sociais
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="https://www.instagram.com/ruthmrleal/">Instagram</a>
+                  <a class="dropdown-item" href="https://www.facebook.com/ruth.leal.507">Facebook</a>
+                  <a class="dropdown-item" href="https://wa.link/o3fzay">Whatsapp</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+      </nav>
+      </div>
+    </header>
 <!--CONTAINER PRINCIPAL-->
 
     <div class="main-container col-12">
