--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <script src="assets/js/script.jsx"></script>
     <link rel="stylesheet" type="text/css" href="/assets/styles/styles.css">
+    <script src="assets/js/script.jsx"></script> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
@@ -21,46 +21,47 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
 
 <!--HEADER-->
-    <header>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
-        <a class="navbar-brand" href="./index.html">
-          <img src="./assets/img/logoruthleal-cropped.svg" width="100px" height="30px" alt="Dra. Ruth Leal" id="logo">
-        </a>
-  <!--NAVBAR-->
+    <header id="header">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand" href="./index.html">
+            <img src="./assets/img/logoruthleal-cropped.svg" width="100px" height="30px" alt="Dra. Ruth Leal" id="logo">
+          </a>
+    <!--NAVBAR-->
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="./index.html">Início<span class="sr-only">(Página atual)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#container-2">Conheça</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./form.html">Fale comigo</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Redes sociais
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Instagram</a>
-                <a class="dropdown-item" href="#">Facebook</a>
-                <a class="dropdown-item" href="#">Linkedin</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-    </nav>
-    </div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="./index.html">Início<span class="sr-only">(Página atual)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#container-2">Conheça</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./form.html">Fale comigo</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Redes sociais
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="https://www.instagram.com/ruthmrleal/">Instagram</a>
+                  <a class="dropdown-item" href="https://www.facebook.com/ruth.leal.507">Facebook</a>
+                  <a class="dropdown-item" href="https://wa.link/o3fzay">Whatsapp</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+      </nav>
+      </div>
     </header>
 
 <!--CONTAINER PRINCIPAL-->
@@ -82,21 +83,21 @@
         <div class="container col-12 container-2">
           <h1 class="header2">CONHEÇA MAIS</h1>
           <div class="card-deck">
-            <div class="card">
+            <div class="card cartao">
               <img class="card-img-top card-photo" src="./assets/img/card-photo3.jpg" alt="Imagem de capa do card">
               <div class="card-body">
                 <h5 class="card-title">Fases da criança</h5>
                 <p class="card-text">As alterações hormonais determinam repercussões sobre o crescimento, o desenvolvimento e o metabolismo de um organismo em fase de maturação, devendo, por isso, serem considerados os aspectos peculiares de cada fase do desenvolvimento.</p>
               </div>
             </div>
-            <div class="card">
+            <div class="card cartao">
               <img class="card-img-top card-photo" src="./assets/img/card-photo2.jpg" alt="Imagem de capa do card">
               <div class="card-body">
                 <h5 class="card-title">O que é endocrinologia pediátrica?</h5>
                 <p class="card-text">A Endocrinologia Pediátrica é uma área de atuação que requer a interação de conhecimentos pediátrico e de endocrinologia para diagnóstico e tratamento de disfunções hormonais, que se instalem desde o período neonatal até o final da adolescência (20 anos).</p>
               </div>
             </div>
-            <div class="card">
+            <div class="card cartao">
               <img class="card-img-top card-photo" src="assets/img/card-photo1.jpeg" alt="Imagem de capa do card">
               <div class="card-body">
                 <h5 class="card-title">Obesidade e diabetes</h5>
@@ -109,14 +110,20 @@
 
       <!--ÚLTIMO CONTAINER-->
 
-      <section>
+      <section id="container-3">
         <div class="container col-12 container-3">
-          
+          <a href="https://www.instagram.com/ruthmrleal/" target="_blank"><ion-icon name="logo-instagram" class="icon"></ion-icon></a>
+          <a href="https://www.facebook.com/ruth.leal.507" target="_blank"><ion-icon name="logo-facebook" class="icon"></ion-icon></a>
+          <a href="https://wa.link/o3fzay" target="_blank"><ion-icon name="logo-whatsapp" class="icon"></ion-icon></a>
+        </div>
+        <div class="align">
+        <a href="#header"><ion-icon name="chevron-up-outline" id="back-btn"></ion-icon></a>
         </div>
       </section>
 
       
       <footer>
+        <address>Ruth Maria da Rocha Leal, Endocrinologista Pediatra, R Felix Pacheco, 2008-109, Centro (Sul), Teresina, R Sao Pedro, 2071, Centro (Sul), Teresina</address>
       </footer>
     </div>
 
@@ -134,7 +141,8 @@
 
 
 
-
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
