--- a/form.html
+++ b/form.html
@@ -10,8 +10,8 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"/>
-    <link rel="stylesheet" type="text/css" href="/assets/styles/styles.css">
-    <script src="./assets/js/script.jsx"></script>
+    <link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
+    <script src="assets/js/script.jsx"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
